  bulletins en fin de période.
- Facilité de sélection d'un fichier de signature pour une classe.
- Possibilité d'ouvrir exceptionnellement la saisie AID en période partiellement close.
- Possibilité de signaler des fautes, de proposer des corrections sur les AID.
- Possibilité d'exclure certaines classes du module bulletins.

Carnet de notes:
- Facilité de transfert des notes d'un enseignement à un autre dans le cas 
  d'un changement de groupe d'élève dans une même classe.
- Possibilité de choisir entre nom complet et nom court des évaluations dans les relevés de notes.

Cahiers de textes 2:
- Ajout d'une visionneuse Instrumenpoche.
- Mise à jour de l'appli GeoGebra.
- Possibilité de copier d'un clic le code source HTML d'une vignette.

Discipline:
- Possibilité de donner l'accès parent/élève aux incidents le concernant, 
  mais sans afficher les détails de l'incident 
  (pour inciter à un contact téléphonique avec le CPE).
- Ajout de tableaux des derniers incidents et des sanctions à venir.

Orientation:
- Facilité de saisie globale de l'orientation pour une classe donnée.

AID:
- Possibilité de désigner comme "professeur" un compte scolarité ou cpe.
- Possibilité de déléguer la gestion de catégories à des personnels (scolarité, 
  cpe ou professeur).
- Possibilité de déclarer des professeurs, gestionnaires, super-gestionnaires par lots.

Épreuves blanches:
- Possibilité d'exporter les notes en CSV sur un autre référentiel que 20.

LSUN et Socle:
- Ajout d'un mode pour permettre des saisies différentes par les professeurs 
  sans que celles de l'un écrasent celles de l'autre.
  Un professeur principal, cpe ou compte scolarité selon ce qui est paramétré 
  effectue un bilan pour remontée LSU.

Épreuves blanches:
- Possibilité d'inclure le nom de salle sur les étiquettes.
- Ajout d'un modèle ODT (OpenDocument) pour les feuilles d'émargement.
- Possibilité de générer des convocations élèves au format ODT (OpenDocument).

Bibliothèques: